--- a/AyaneNaito JacobCedar SafeCracker.html
+++ b/AyaneNaito JacobCedar SafeCracker.html
@@ -6,7 +6,8 @@
 		<script src = "SafeCracker Utilities.js"></script>
 		<script>
 			function initialize() {
-				
+				createCombo();
+				alert(finalCombo);
 			}
 		
 		</script>
