--- a/AyaneNaito JacobCedar SafeCracker.html
+++ b/AyaneNaito JacobCedar SafeCracker.html
@@ -10,7 +10,7 @@
 				currentRound = 0;
 				buildRound();
 				createCombo(currentRound);
-				currentRound++;
+				createTime(currentRound);
 
 			}
 
@@ -23,7 +23,7 @@
 
 
 	<body onload = "initialize();">
-
+		<button>Combination Entered</button>
 
 
 	</body>
