--- a/AyaneNaito JacobCedar SafeCracker.html
+++ b/AyaneNaito JacobCedar SafeCracker.html
@@ -4,16 +4,9 @@
 	<head>
 		<title> </title>
 		<script src = "SafeCrackerData.js"></script>
-		<script src = "SafeCracker Utilities.js"></script>
+		<script src = "SafeCrackerScripts.js"></script>
 		<script>
-			function initialize() {
-				currentRound = 0;
-				buildRound();
-				createCombo(currentRound);
-				createTime(currentRound);
-
-			}
-
+			
 		</script>
 
 		<style></style>
@@ -24,6 +17,7 @@
 
 	<body onload = "initialize();">
 		<button>Combination Entered</button>
+		<button>submit</button>
 
 
 	</body>
